--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/IMG_20210222_093446_162.jpg" alt="img">
+          <img src="/img/IMG_20210222_093446_162.jpg" alt="img">
         </div>
       </div>
       <div class="col-right">
